@@ -1,3 +1,5 @@
+* Avoid using querySelectorAll() if a compiled selector exists. [jddalton]
+
 * Remove the unnecessary `from` argument from the match() method. [jddalton]
 
 * Make the match() method utilize the compiled cache better. [jddalton]
